# kichefu-chefu-store

./: .env.example  .gitignore  README.md  render.yaml  requirements.txt
.github/: copilot-instructions.md
config/: settings.py  urls.py
docs/: quant_platform_architecture.md
marketplace/: admin.py  api_urls.py  apps.py  demo_seed.py  forms.py  importers.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
quant-platform/: README.md
quant-platform/services/backend/: .dockerignore  Dockerfile  pyproject.toml
quant-platform/services/backend/app/: __init__.py  main.py
quant-platform/services/backend/app/api/: __init__.py  deps.py
quant-platform/services/backend/app/api/routes/: __init__.py  health.py  market.py  strategy.py
quant-platform/services/backend/app/api/schemas/: strategy.py
quant-platform/services/backend/app/cache/: __init__.py  redis.py
quant-platform/services/backend/app/core/: config.py
quant-platform/services/backend/app/db/: __init__.py  base.py  migrate.py  session.py
quant-platform/services/backend/app/db/models/: __init__.py  market.py
quant-platform/services/backend/app/notifications/: __init__.py  telegram.py
quant-platform/services/backend/app/services/market_data/: __init__.py  binance_stream.py  store.py
quant-platform/services/backend/app/services/strategy/: __init__.py  features.py  model.py  training.py
quant-platform/services/backend/app/workers/: market_stream.py
templates/: accessories_marketplace.html  accessory_detail.html  car_detail.html  cars_marketplace.html  (+10 more)
(+76 files in other folders)
